<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item android:title="Categorii">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_auto"
                    android:icon="@drawable/ic_baseline_directions_car_24"
                    android:title="@string/auto" />
                <item
                    android:id="@+id/nav_imobiliare"
                    android:icon="@drawable/ic_house"
                    android:title="@string/imobiliare" />
                <item
                    android:id="@+id/nav_sports"
                    android:icon="@drawable/ic_sports"
                    android:title="@string/hobby" />
                <item
                    android:id="@+id/nav_electronice"
                    android:icon="@drawable/ic_microwave"
                    android:title="@string/electronica"/>
                <item
                    android:id="@+id/nav_telefoane"
                    android:icon="@drawable/ic_phone"
                    android:title="@string/telefon"/>
                <item
                    android:id="@+id/nav_echipamente"
                    android:icon="@drawable/ic_industriale"
                    android:title="@string/industriale"/>
            </group>
        </menu>

    </item>

    <item android:title="Profil">
        <menu>
            <item
                android:id="@+id/nav_licitatie"
                android:icon="@drawable/ic_baseline_add_24"
                android:title="@string/nova_subhasta"/>

            <item
                android:id="@+id/nav_licitatii"
                android:icon="@drawable/ic_baseline_edit_24"
                android:title="@string/meves_subhastes"/>

            <item
                android:id="@+id/nav_profil"
                android:icon="@drawable/ic_baseline_tag_faces_24"
                android:title="@string/perfil"/>

            <item
                android:id="@+id/nav_cb"
                android:title="@string/mostrar_nom"
                app:actionViewClass="android.widget.CheckBox"
                android:icon="@drawable/ic_baseline_show_chart_24"/>

            <item
                android:id="@+id/nav_contact"
                android:title="@string/sobre"
                android:icon="@drawable/ic_baseline_contact_support_24"
                />
        </menu>
    </item>

</menu>