<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:hint="@string/username"
        android:gravity="center"
        android:id="@+id/et_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        android:imeOptions="actionDone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:hint="@string/email"
        android:gravity="center"
        android:id="@+id/et_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        android:imeOptions="actionDone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:hint="@string/password"
        android:gravity="center"
        android:id="@+id/et_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:imeOptions="actionDone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:hint="@string/retype_pass"
        android:gravity="center"
        android:id="@+id/et_retype_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:imeOptions="actionDone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/sign_up_btn"
        app:layout_constraintTop_toBottomOf="@id/et_retype_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>