<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

<!--    <CheckBox-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:id="@+id/cb_selected"-->
<!--        android:layout_margin="10dp"-->
<!--        android:focusable="false"-->
<!--        />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/nom_producte"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nume"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:textStyle="bold"
            android:background="@drawable/dreptunghi"
            android:textAlignment="center"/>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nume_pret"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/preu"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pret"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@drawable/dreptunghi"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nume_oras"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/temps"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_oras"
            android:layout_margin="5dp"
            android:layout_weight="3"
            android:textStyle="bold"
            android:background="@drawable/dreptunghi"
            android:textAlignment="center"/>

    </LinearLayout>


</LinearLayout>